# tamal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/tamal-abi/: Cargo.toml  README.md
crates/tamal-abi/src/: cobs.rs  config.rs  crc8.rs  isa.rs  lib.rs  trace.rs  wire.rs
crates/tamal-asm/: Cargo.toml  README.md
crates/tamal-asm-cli/: Cargo.toml  README.md
crates/tamal-asm-cli/src/: main.rs
crates/tamal-asm/src/: diagnostics.rs  disasm.rs  encoder.rs  lexer.rs  lib.rs  mnemonics.rs  parser.rs  symbol.rs
crates/tamal-lang/: Cargo.toml  README.md
crates/tamal-lang-cli/: Cargo.toml  README.md
crates/tamal-lang-cli/src/: main.rs
crates/tamal-lang/src/: consteval.rs  emit.rs  lexer.rs  lib.rs  parser.rs
crates/tamal-lang/tests/: examples.rs  values.rs
crates/tamal-loader/: Cargo.toml  README.md
crates/tamal-loader-cli/: Cargo.toml  README.md
crates/tamal-loader-cli/src/: main.rs
crates/tamal-loader/src/: device.rs  error.rs  lib.rs  transport.rs
docs/superpowers/plans/: 2026-07-01-tamal-alu-branch-implementation.md  2026-07-01-tamal-isa-pure-core.md  2026-07-01-tamal-register-file-implementation.md  2026-07-01-tamal-uart-implementation.md  2026-07-02-tamal-bram.md  2026-07-02-tamal-engine.md  2026-07-02-tamal-io.md  2026-07-02-tamal-loader.md  2026-07-02-tamal-wire-format.md  2026-07-03-tamal-abi-isa.md  2026-07-03-tamal-topentity.md  2026-07-04-tamal-asm.md  2026-07-04-tamal-loader-host.md  2026-07-05-tamal-cyclonev-board.md  2026-07-20-tamal-lang-01-walking-skeleton.md  2026-07-21-tamal-lang-02-values-and-crc.md
docs/superpowers/specs/: 2026-07-01-tamal-alu-branch-design.md  2026-07-01-tamal-isa-design.md  2026-07-01-tamal-register-file-design.md  2026-07-01-tamal-scaffold-design.md  2026-07-01-tamal-uart-design.md  2026-07-02-tamal-bram-design.md  2026-07-02-tamal-engine-design.md  2026-07-02-tamal-io-design.md  2026-07-02-tamal-loader-design.md  2026-07-02-tamal-wire-format-design.md  2026-07-03-tamal-abi-isa-design.md  2026-07-03-tamal-topentity-design.md  2026-07-04-tamal-asm-design.md  2026-07-04-tamal-loader-host-design.md  2026-07-05-tamal-cyclonev-board-design.md  2026-07-20-tamal-lang-design.md
docs/talk/: notes.md
docs/tamal-lang/: README.md  cookbook.md  for-hardware-engineers.md  for-software-engineers.md  getting-started.md  language-guide.md  reference.md  stdlib-espi.md
examples/: alu_selfcheck.s  branch_selfcheck.s  flash_completion.s  mark_trace.s  oob_smbus_msg.s  peripheral_io_read.s  smoke.tam  smoke_halt.s  virtual_wire_pltrst.s
hdl/: Makefile  Makefile.quartus  Makefile.vivado  PLAN.md  README.md  build.cfg  cabal.project  cabal.project.freeze  fourmolu.yaml  hie.yaml  stack.yaml  tamal.cabal
hdl/constraints/: arty_a7.xdc  c5g.sdc  c5g_pins.tcl
hdl/quartus/: build.tcl
hdl/src/: Tamal.hs
hdl/src/Tamal/: Alu.hs  Branch.hs  Config.hs  Crc.hs  Domain.hs  Engine.hs  Io.hs  Isa.hs  Loader.hs  Mem.hs  Params.hs  RegFile.hs  Top.hs  Trace.hs  Uart.hs  Wire.hs
hdl/src/Tamal/Board/: ArtyA7.hs  CycloneV.hs
hdl/src/Tamal/Bus/: Serdes.hs
hdl/src/Tamal/Loader/: Cobs.hs
hdl/src/Tamal/Uart/: BaudGen.hs  Rx.hs  Tx.hs
hdl/src/Tamal/Wire/: Cobs.hs
hdl/tests/: unittests.hs
hdl/tests/Test/: Alu.hs  Branch.hs  Config.hs  Crc.hs  Engine.hs  Gen.hs  Io.hs  Isa.hs  Loader.hs  Mem.hs  RegFile.hs  Serdes.hs  Top.hs  Trace.hs  Uart.hs  Wire.hs
hdl/vivado/: build.tcl  flash.tcl  program.tcl
