cabal-version:       2.4
name:                tamal
version:             0.1.0
synopsis:            eSPI compliance test-rig gateware (Clash) for the Arty A7-100T and Cyclone V GX Starter Kit
-- CERN-OHL-P-2.0 is a real SPDX id, but Cabal's bundled SPDX list doesn't know
-- it; express it as a LicenseRef and ship the full text in license-file.
license:             LicenseRef-CERN-OHL-P-2.0
license-file:        LICENSE
author:              Felipe Balbi <felipe@balbi.sh>
copyright:           2026 Felipe Balbi

-- The common-options block is adopted from the upstream clash-starters
-- projects. The ghc-options in particular are load-bearing for Clash (see the
-- comments) — don't trim them without reason.
common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'makeTopEntity'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.10.0 && < 1.12,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat


library
  import: common-options
  hs-source-dirs: src
  -- exposed-modules grows per implementation-plan task; start with the clock
  -- domain and the placeholder heartbeat top.
  exposed-modules:
    Tamal.Domain
    Tamal.Params
    Tamal.Board.ArtyA7
    Tamal.Board.CycloneV
    Tamal.Crc
    Tamal.Isa
    Tamal.Config
    Tamal.Bus.Serdes
    Tamal.Trace
    Tamal.Branch
    Tamal.Alu
    Tamal.RegFile
    Tamal.Uart.BaudGen
    Tamal.Uart.Rx
    Tamal.Uart.Tx
    Tamal.Uart
    Tamal.Engine
    Tamal.Mem
    Tamal.Wire
    Tamal.Wire.Cobs
    Tamal.Loader
    Tamal.Loader.Cobs
    Tamal.Io
    Tamal.Top
  default-language: Haskell2010

-- Builds the executable 'clash', with the tamal project in scope.
-- Generate Verilog with:  cabal run clash -- Tamal.Board.ArtyA7 --verilog
--                         (or Tamal.Board.CycloneV)
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, tamal
  -- Use the RTS options that upstream clash uses for better performance:
  -- https://github.com/clash-lang/clash-compiler/blob/daef4893dee4910ab4eced0c141a39d40d88996a/changelog/2026-05-06T15_20_00%2B02_00_ghc_style_rts_defaults
  ghc-options: "-with-rtsopts=-K512M -H -I5 -T"
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', the Clash REPL, with the tamal project
-- in scope.  Start it with:  cabal run clashi
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  ghc-options: "-with-rtsopts=-K512M -H -I5 -T"
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc, tamal

-- Pure-Haskell tasty suite (tests/unittests.hs): independent of the Vivado
-- toolchain. Run with `cabal test`. other-modules grows as components gain
-- tests.
test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Test.Gen
    Test.Crc
    Test.Isa
    Test.Config
    Test.Serdes
    Test.Trace
    Test.Branch
    Test.Alu
    Test.RegFile
    Test.Uart
    Test.Engine
    Test.Mem
    Test.Wire
    Test.Loader
    Test.Io
    Test.Top
  build-depends:
    tamal,
    tasty >= 1.2 && < 1.6,
    tasty-hunit,
    tasty-hedgehog,
    hedgehog,
    clash-prelude-hedgehog
