[package]
name = "tamal-abi"
version = "0.1.0"
description = "Transport-agnostic ABI for tamal: bytecode/ISA encoding plus control and result wire types."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
