[package]
name = "tamal-asm-cli"
version = "0.1.0"
description = "Command-line front-end for the tamal assembler."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "tamal-asm"
path = "src/main.rs"

[dependencies]
tamal-abi.workspace = true
tamal-asm.workspace = true
clap.workspace = true
color-eyre.workspace = true
ariadne.workspace = true
