[package]
name = "tamal-asm"
version = "0.1.0"
description = "Assembler for the tamal ISA: RISC-V-flavored source into tamal bytecode."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tamal-abi.workspace = true

[dev-dependencies]
proptest.workspace = true
